# models/absen.go
@@ -1,0 +1,25 @@
+package models
+
+type GetAllAbsenResponse struct {
+	IdPertemuan     int    `json:"id_pertemuan" gorm:"column:id_pertemuan"`
+	Id              int    `json:"id" gorm:"column:id"`
+	JamMulai        string `json:"jam_mulai" gorm:"column:jam_mulai"`
+	JamSelesai      string `json:"jam_selesai" gorm:"column:jam_selesai"`
+	Hari            string `json:"hari" gorm:"column:hari"`
+	NamaLengkap     string `json:"nama_lengkap" gorm:"column:nama_lengkap"`
+	NamaDosen       string `json:"nama_dosen" gorm:"column:nama_dosen"`
+	KodeKurikulum   string `json:"kode_kurikulum" gorm:"column:kode_kurikulum"`
+	IdMk            int    `json:"id_mk" gorm:"column:id_mk"`
+	NamaMk          string `json:"nama_mk" gorm:"column:nama_mk"`
+	IdSemester      int    `json:"id_semester" gorm:"column:id_semester"`
+	InisialKelas    string `json:"inisial_kelas" gorm:"column:inisial_kelas"`
+	NamaKelas       string `json:"nama_kelas" gorm:"column:nama_kelas"`
+	Semester        string `json:"semester" gorm:"column:semester"`
+	Tahun           string `json:"tahun" gorm:"column:tahun"`
+	NamaProdi       string `json:"nama_prodi" gorm:"column:nama_prodi"`
+	NamaKonsentrasi string `json:"nama_konsentrasi" gorm:"column:nama_konsentrasi"`
+	JumlahPertemuan int    `json:"jumlah_pertemuan" gorm:"column:jumlah_pertemuan"`
+	JumlahHadir     int    `json:"jumlah_hadir" gorm:"column:jumlah_hadir"`
+	DayNumber       int    `json:"day_number" gorm:"column:day_number"`
+	IdKelas         int    `json:"id_kelas" gorm:"column:id_kelas"`
+}
